			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

09-Nov-2004
~~~~~~~~~~~
Bugfix: Test for presence of extended attributes on Solaris gave wrong
        answer when they were not supported (Stephen Watson).

08-Nov-2004
~~~~~~~~~~~
The icons for mount point and symbolic link are now side-by-side, not
one on top of the other, and a new icon is used to mark files with
extended attributes (Stephen Watson).

27-Nov-2004
~~~~~~~~~~~
Bugfix: Use gtk_selection_data_set_text instead of gtk_selection_data_set when
	pasting filenames so that other applications know the string is UTF-8
	(Thomas Leonard; reported by Dennis).

27-Nov-2004
~~~~~~~~~~~
Better extended attribute detection under Solaris (Stephen Watson).

25-Nov-2004
~~~~~~~~~~~
More extended attribute support. The "Set Type..." menu item should be 
disabled if not supported by the system or FS (Stephen Watson).

24-Nov-2004
~~~~~~~~~~~
Method of scaling pinboard images is now an option, as the default could
produce poor results on some systems (Stephen Watson).

22-Nov-2004
~~~~~~~~~~~
Updated it.po and Manual-it.xml (Yuri Bongiorno)

19-Nov-2004
~~~~~~~~~~~
Bugfix: Dragging a lasso box above the top of the window in details mode
	selected all the items outside the box (Thomas Leonard; reported by
	Anthony DiSante).

12-Nov-2004
~~~~~~~~~~~
Only show executable files in green if clicking would actually run them, not
just because they have the execute bit set (Thomas Leonard).

11-Nov-2004
~~~~~~~~~~~
Much faster thumbnail generation (Ken Hayber, reported by Anthony DiSante).

08-Nov-2004
~~~~~~~~~~~
When closing a filer window showing a directory under a user-mounted
mount-point, offer to unmount the device if no other filer window also shows
that mount point (requested by Tony Houghton and others). Also do this check
when changing to a parent directory.
Scale iconified window icons on the pinboard down to normal size (Ken Hayber).

08-Nov-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).