@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+23-Dec-2004
+~~~~~~~~~~~
+If an item has extended attributes, report that before checking whether they
+are supported (Thomas Leonard).
+
 09-Nov-2004
 ~~~~~~~~~~~
 Bugfix: Test for presence of extended attributes on Solaris gave wrong
